# RustWebDev

./: .gitignore  Cargo.toml  Dockerfile  README.md  askama.toml  compose.yaml  questions.json
QuestionsFrontEnd/src/: main.rs  question.rs
assets/html/: answers.html  ask.html  common.html  index.html  question.html  questions.html
assets/static/: questions.css
db/: questions.sql
joke/: Cargo.toml
joke/src/: joke.rs  main.rs
migrations/: 20240507214755_questions_table_populate.down.sql  20240507214755_questions_table_populate.up.sql  20240507230606_answers_table_populate.down.sql  20240507230606_answers_table_populate.up.sql
src/: errors.rs  main.rs  questions.rs  store.rs  web.rs
src/routes/: answers.rs  mod.rs  questions.rs
textbook_exercises/: Cargo.toml
textbook_exercises/src/: main.rs
web-axum/: Cargo.toml
web-axum/html/: index.html
web-axum/src/: main.rs
webhello/: README.md
webhello/src/: main.rs
webhello/src/html/: main.html
